cmake_minimum_required(VERSION 3.7 FATAL_ERROR)

project(LeetCodeTasks CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

include_directories("external/googletest/include")
link_directories(external/googletest/bin)

enable_testing()
# Algorithms
add_subdirectory(Algorithms/CommonLib bin/CommonLib)
add_subdirectory(Algorithms/0001.TwoSum bin/0001.TwoSum)
add_subdirectory(Algorithms/0002.AddTwoNumbers bin/0002.AddTwoNumbers)
add_subdirectory(Algorithms/0003.LongestSubstringWithoutRepeatingCharacters bin/0003.LongestSubstringWithoutRepeatingCharacters)
add_subdirectory(Algorithms/0005.LongestPalindromicSubstring bin/0005.LongestPalindromicSubstring)
add_subdirectory(Algorithms/0006.ZigZagConversion bin/0006.ZigZagConversion)
add_subdirectory(Algorithms/0007.ReverseInteger bin/0007.ReverseInteger)
add_subdirectory(Algorithms/0008.StringToInteger bin/0008.StringToInteger)
add_subdirectory(Algorithms/0009.PalindromeNumber bin/0009.PalindromeNumber)
add_subdirectory(Algorithms/0010.RegularExpressionMatching bin/0010.RegularExpressionMatching)
add_subdirectory(Algorithms/0011.ContainerWithMostWater bin/0011.ContainerWithMostWater)
add_subdirectory(Algorithms/0012.IntegerToRoman bin/0012.IntegerToRoman)
add_subdirectory(Algorithms/0013.RomanToInteger bin/0013.RomanToInteger)
add_subdirectory(Algorithms/0014.LongestCommonPrefix bin/0014.LongestCommonPrefix)
add_subdirectory(Algorithms/0015.3Sum bin/0015.3Sum)
add_subdirectory(Algorithms/0016.3SumClosest bin/0016.3SumClosest)
add_subdirectory(Algorithms/0017.LetterCombinationsOfPhoneNumber bin/0017.LetterCombinationsOfPhoneNumber)
add_subdirectory(Algorithms/0018.4Sum bin/0018.4Sum)
add_subdirectory(Algorithms/0019.RemoveNthNodeFromEndOfList bin/0019.RemoveNthNodeFromEndOfList)
add_subdirectory(Algorithms/0020.ValidParentheses bin/0020.ValidParentheses)
add_subdirectory(Algorithms/0021.MergeTwoSortedLists bin/0021.MergeTwoSortedLists)
add_subdirectory(Algorithms/0023.MergeKSortedLists bin/0023.MergeKSortedLists)
add_subdirectory(Algorithms/0022.GenerateParentheses bin/0022.GenerateParentheses)
add_subdirectory(Algorithms/0024.SwapNodesInPairs bin/0024.SwapNodesInPairs)
add_subdirectory(Algorithms/0025.ReverseNodesInKGroup bin/0025.ReverseNodesInKGroup)
add_subdirectory(Algorithms/0026.RemoveDuplicatesFromSortedArray bin/0026.RemoveDuplicatesFromSortedArray)
add_subdirectory(Algorithms/0027.RemoveElement bin/0027.RemoveElement)
add_subdirectory(Algorithms/0028.Implement_strStr bin/0028.Implement_strStr)
add_subdirectory(Algorithms/0029.DivideTwoIntegers bin/0029.DivideTwoIntegers)
add_subdirectory(Algorithms/0031.NextPermutation bin/0031.NextPermutation)
add_subdirectory(Algorithms/0033.SearchInRotatedSortedArray bin/0033.SearchInRotatedSortedArray)
add_subdirectory(Algorithms/0034.FindFirstLastElementPositionInSortedArray bin/0034.FindFirstLastElementPositionElementInSortedArray)
add_subdirectory(Algorithms/0035.SearchInsertPosition bin/0035.SearchInsertPosition)
add_subdirectory(Algorithms/0036.ValidSudoku bin/0036.ValidSudoku)
add_subdirectory(Algorithms/0038.CountAndSay bin/0038.CountAndSay)
add_subdirectory(Algorithms/0039.CombinationSum bin/0039.CombinationSum)
add_subdirectory(Algorithms/0040.CombinationSumII bin/0040.CombinationSumII)
add_subdirectory(Algorithms/0041.FirstMissingPositive bin/0041.FirstMissingPositive)
add_subdirectory(Algorithms/0042.TrappingRainWater bin/0042.TrappingRainWater)
add_subdirectory(Algorithms/0043.MultiplyStrings bin/0043.MultiplyStrings)
add_subdirectory(Algorithms/0045.JumpGameII bin/0045.JumpGameII)
add_subdirectory(Algorithms/0046.Permutations bin/0046.Permutations)
add_subdirectory(Algorithms/0047.PermutationsII bin/0047.PermutationsII)
add_subdirectory(Algorithms/0048.RotateImage bin/0048.RotateImage)
add_subdirectory(Algorithms/0049.GroupAnagrams bin/0049.GroupAnagrams)
add_subdirectory(Algorithms/0050.Pow bin/0050.Pow)
add_subdirectory(Algorithms/0051.NQueens bin/0051.NQueens)
add_subdirectory(Algorithms/0052.NQueensII bin/0052.NQueensII)
add_subdirectory(Algorithms/0053.MaximumSubarray bin/0053.MaximumSubarray)
add_subdirectory(Algorithms/0054.SpiralMatrix bin/0054.SpiralMatrix)
add_subdirectory(Algorithms/0055.JumpGame bin/0055.JumpGame)
add_subdirectory(Algorithms/0056.MergeIntervals bin/0056.MergeIntervals)
add_subdirectory(Algorithms/0057.InsertInterval bin/0057.InsertInterval)
add_subdirectory(Algorithms/0058.LengthOfLastWord bin/0058.LengthOfLastWord)
add_subdirectory(Algorithms/0059.SpiralMatrixII bin/0059.SpiralMatrixII)
add_subdirectory(Algorithms/0060.PermutationSequence bin/0060.PermutationSequence)
add_subdirectory(Algorithms/0061.RotateList bin/0061.RotateList)
add_subdirectory(Algorithms/0062.UniquePaths bin/0062.UniquePaths)
add_subdirectory(Algorithms/0063.UniquePathsII bin/0063.UniquePathsII)
add_subdirectory(Algorithms/0064.MinimumPathSum bin/0064.MinimumPathSum)
add_subdirectory(Algorithms/0065.ValidNumber bin/0065.ValidNumber)
add_subdirectory(Algorithms/0066.PlusOne bin/0066.PlusOne)
add_subdirectory(Algorithms/0067.AddBinary bin/0067.AddBinary)
add_subdirectory(Algorithms/0068.TextJustification bin/0068.TextJustification)
add_subdirectory(Algorithms/0069.Sqrt bin/0069.Sqrt)
add_subdirectory(Algorithms/0070.ClimbingStairs bin/0070.ClimbingStairs)
add_subdirectory(Algorithms/0071.SimplifyPath bin/0071.SimplifyPath)
add_subdirectory(Algorithms/0072.EditDistance bin/0072.EditDistance)
add_subdirectory(Algorithms/0073.SetMatrixZeroes bin/0073.SetMatrixZeroes)
add_subdirectory(Algorithms/0074.Search2DMatrix bin/0074.Search2DMatrix)
add_subdirectory(Algorithms/0075.SortColors bin/0075.SortColors)
add_subdirectory(Algorithms/0076.MinimumWindowSubstring bin/0076.MinimumWindowSubstring)
add_subdirectory(Algorithms/0077.Combinations bin/0077.Combinations)
add_subdirectory(Algorithms/0078.Subsets bin/0078.Subsets)
add_subdirectory(Algorithms/0079.WordSearch bin/0079.WordSearch)
add_subdirectory(Algorithms/0080.RemoveDuplicatesFromSortedArrayII bin/0080.RemoveDuplicatesFromSortedArrayII)
add_subdirectory(Algorithms/0081.SearchInRotatedSortedArrayII bin/0081.SearchInRotatedSortedArrayII)
add_subdirectory(Algorithms/0082.RemoveDuplicatesFromSortedListII bin/0082.RemoveDuplicatesFromSortedListII)
add_subdirectory(Algorithms/0083.RemoveDuplicatesFromSortedList bin/0083.RemoveDuplicatesFromSortedList)
add_subdirectory(Algorithms/0086.PartitionList bin/0086.PartitionList)
add_subdirectory(Algorithms/0088.MergeSortedArray bin/0088.MergeSortedArray)
add_subdirectory(Algorithms/0089.GrayCode bin/0089.GrayCode)
add_subdirectory(Algorithms/0090.SubsetsII bin/0090.SubsetsII)
add_subdirectory(Algorithms/0091.DecodeWays bin/0091.DecodeWays)
add_subdirectory(Algorithms/0092.ReverseLinkedListII bin/0092.ReverseLinkedListII)
add_subdirectory(Algorithms/0093.RestoreIPAddresses bin/0093.RestoreIPAddresses)
add_subdirectory(Algorithms/0094.BinaryTreeInorderTraversal bin/0094.BinaryTreeInorderTraversal)
add_subdirectory(Algorithms/0095.UniqueBinarySearchTreesII bin/0095.UniqueBinarySearchTreesII)
add_subdirectory(Algorithms/0096.UniqueBinarySearchTrees bin/0096.UniqueBinarySearchTrees)
add_subdirectory(Algorithms/0097.InterleavingString bin/0097.InterleavingString)
add_subdirectory(Algorithms/0098.ValidateBinarySearchTree bin/0098.ValidateBinarySearchTree)
add_subdirectory(Algorithms/0100.SameTree bin/0100.SameTree)
add_subdirectory(Algorithms/0101.SymmetricTree bin/0101.SymmetricTree)
add_subdirectory(Algorithms/0102.BinaryTreeLevelOrderTraversal bin/0102.BinaryTreeLevelOrderTraversal)
add_subdirectory(Algorithms/0103.BinaryTreeZigzagLevelOrderTraversal bin/0103.BinaryTreeZigzagLevelOrderTraversal)
add_subdirectory(Algorithms/0104.MaximumDepthOfBinaryTree bin/0104.MaximumDepthOfBinaryTree)
add_subdirectory(Algorithms/0105.ConstructBinTreeFromPreorderInorderTraversal bin/0105.ConstructBinTreeFromPreorderInorderTraversal)
add_subdirectory(Algorithms/0106.ConstructBinTreeFromInorderPostorderTraversal bin/0106.ConstructBinTreeFromInorderPostorderTraversal)
add_subdirectory(Algorithms/0107.BinaryTreeLevelOrderTraversalII bin/0107.BinaryTreeLevelOrderTraversalII)
add_subdirectory(Algorithms/0108.ConvertSortedArrayToBinarySearchTree bin/0108.ConvertSortedArrayToBinarySearchTree)
add_subdirectory(Algorithms/0109.ConvertSortedListToBinarySearchTree bin/0109.ConvertSortedListToBinarySearchTree)
add_subdirectory(Algorithms/0110.BalancedBinaryTree bin/0110.BalancedBinaryTree)
add_subdirectory(Algorithms/0111.MinimumDepthOfBinaryTree bin/0111.MinimumDepthOfBinaryTree)
add_subdirectory(Algorithms/0112.PathSum bin/0112.PathSum)
add_subdirectory(Algorithms/0113.PathSumII bin/0113.PathSumII)
add_subdirectory(Algorithms/0114.FlattenBinaryTreeToLinkedList bin/0114.FlattenBinaryTreeToLinkedList)
add_subdirectory(Algorithms/0115.DistinctSubsequences bin/0115.DistinctSubsequences)
add_subdirectory(Algorithms/0116.PopulatingNextRightPointersInEachNode bin/0116.PopulatingNextRightPointersInEachNode)
add_subdirectory(Algorithms/0117.PopulatingNextRightPointersInEachNodeII bin/0117.PopulatingNextRightPointersInEachNodeII)
add_subdirectory(Algorithms/0118.PascalTriangle bin/0118.PascalTriangle)
add_subdirectory(Algorithms/0119.PascalTriangleII bin/0119.PascalTriangleII)
add_subdirectory(Algorithms/0120.Triangle bin/0120.Triangle)
add_subdirectory(Algorithms/0121.BestTimeToBuyAndSellStock bin/0121.BestTimeToBuyAndSellStock)
add_subdirectory(Algorithms/0122.BestTimeToBuyAndSellStockII bin/0122.BestTimeToBuyAndSellStockII)
add_subdirectory(Algorithms/0125.ValidPalindrome bin/0125.ValidPalindrome)
add_subdirectory(Algorithms/0128.LongestConsecutiveSequence bin/0128.LongestConsecutiveSequence)
add_subdirectory(Algorithms/0129.SumRootToLeafNumbers bin/0129.SumRootToLeafNumbers)
add_subdirectory(Algorithms/0130.SurroundedRegions bin/0130.SurroundedRegions)
add_subdirectory(Algorithms/0131.PalindromePartitioning bin/0131.PalindromePartitioning)
add_subdirectory(Algorithms/0133.CloneGraph bin/0133.CloneGraph)
add_subdirectory(Algorithms/0134.GasStation bin/0134.GasStation)
add_subdirectory(Algorithms/0136.SingleNumber bin/0136.SingleNumber)
add_subdirectory(Algorithms/0138.CopyListWithRandomPointer bin/0138.CopyListWithRandomPointer)
add_subdirectory(Algorithms/0141.LinkedListCycle bin/0141.LinkedListCycle)
add_subdirectory(Algorithms/0142.LinkedListCycleII bin/0142.LinkedListCycleII)
add_subdirectory(Algorithms/0143.ReorderList bin/0143.ReorderList)
add_subdirectory(Algorithms/0144.BinaryTreePreorderTraversal bin/0144.BinaryTreePreorderTraversal)
add_subdirectory(Algorithms/0145.BinaryTreePostorderTraversal bin/0145.BinaryTreePostorderTraversal)
add_subdirectory(Algorithms/0146.LRUCache bin/0146.LRUCache)
add_subdirectory(Algorithms/0147.InsertionSortList bin/0147.InsertionSortList)
add_subdirectory(Algorithms/0148.SortList bin/0148.SortList)
add_subdirectory(Algorithms/0150.EvaluateReversePolishNotation bin/0150.EvaluateReversePolishNotation)
add_subdirectory(Algorithms/0151.ReverseWordsInString bin/0151.ReverseWordsInString)
add_subdirectory(Algorithms/0152.MaximumProductSubarray bin/0152.MaximumProductSubarray)
add_subdirectory(Algorithms/0153.FindMinimumInRotatedSortedArray bin/0153.FindMinimumInRotatedSortedArray)
add_subdirectory(Algorithms/0155.MinStack bin/0155.MinStack)
add_subdirectory(Algorithms/0162.FindPeakElement bin/0162.FindPeakElement)
add_subdirectory(Algorithms/0165.CompareVersionNumbers bin/0165.CompareVersionNumbers)
add_subdirectory(Algorithms/0166.FractionToRecurringDecimal bin/0166.FractionToRecurringDecimal)
add_subdirectory(Algorithms/0167.TwoSumII bin/0167.TwoSumII)
add_subdirectory(Algorithms/0168.ExcelSheetColumnTitle bin/0168.ExcelSheetColumnTitle)
add_subdirectory(Algorithms/0169.MajorityElement bin/0169.MajorityElement)
add_subdirectory(Algorithms/0171.ExcelSheetColumnNumber bin/0171.ExcelSheetColumnNumber)
add_subdirectory(Algorithms/0172.FactorialTrailingZeroes bin/0172.FactorialTrailingZeroes)
add_subdirectory(Algorithms/0173.BinarySearchTreeIterator bin/0173.BinarySearchTreeIterator)
add_subdirectory(Algorithms/0179.LargestNumber bin/0179.LargestNumber)
add_subdirectory(Algorithms/0187.RepeatedDNASequences bin/0187.RepeatedDNASequences)
add_subdirectory(Algorithms/0190.ReverseBits bin/0190.ReverseBits)
add_subdirectory(Algorithms/0191.NumberOf1Bits bin/0191.NumberOf1Bits)
add_subdirectory(Algorithms/0198.HouseRobber bin/0198.HouseRobber)
add_subdirectory(Algorithms/0199.BinaryTreeRightSideView bin/0199.BinaryTreeRightSideView)
add_subdirectory(Algorithms/0200.NumberOfIslands bin/0200.NumberOfIslands)
add_subdirectory(Algorithms/0201.BitwiseAndOfNumbersRange bin/0201.BitwiseAndOfNumbersRange)
add_subdirectory(Algorithms/0202.HappyNumber bin/0202.HappyNumber)
add_subdirectory(Algorithms/0203.RemoveLinkedListElements bin/0203.RemoveLinkedListElements)
add_subdirectory(Algorithms/0204.CountPrimes bin/0204.CountPrimes)
add_subdirectory(Algorithms/0205.IsomorphicStrings bin/0205.IsomorphicStrings)
add_subdirectory(Algorithms/0206.ReverseLinkedList bin/0206.ReverseLinkedList)
add_subdirectory(Algorithms/0207.CourseSchedule bin/0207.CourseSchedule)
add_subdirectory(Algorithms/0208.ImplementTrie bin/0208.ImplementTrie)
add_subdirectory(Algorithms/0209.MinimumSizeSubarraySum bin/0209.MinimumSizeSubarraySum)
add_subdirectory(Algorithms/0210.CourseScheduleII bin/0210.CourseScheduleII)
add_subdirectory(Algorithms/0213.HouseRobberII bin/0213.HouseRobberII)
add_subdirectory(Algorithms/0215.KthLargestElementInArray bin/0215.KthLargestElementInArray)
add_subdirectory(Algorithms/0216.CombinationSumIII bin/0216.CombinationSumIII)
add_subdirectory(Algorithms/0217.ContainsDuplicate bin/0217.ContainsDuplicate)
add_subdirectory(Algorithms/0219.ContainsDuplicateII bin/0219.ContainsDuplicateII)
add_subdirectory(Algorithms/0221.MaximalSquare bin/0221.MaximalSquare)
add_subdirectory(Algorithms/0222.CountCompleteTreeNodes bin/0222.CountCompleteTreeNodes)
add_subdirectory(Algorithms/0223.RectangleArea bin/0223.RectangleArea)
add_subdirectory(Algorithms/0224.BasicCalculator bin/0224.BasicCalculator)
add_subdirectory(Algorithms/0225.ImplementStackUsingQueues bin/0225.ImplementStackUsingQueues)
add_subdirectory(Algorithms/0226.InvertBinaryTree bin/0226.InvertBinaryTree)
add_subdirectory(Algorithms/0227.BasicCalculatorII bin/0227.BasicCalculatorII)
add_subdirectory(Algorithms/0228.SummaryRanges bin/0228.SummaryRanges)
add_subdirectory(Algorithms/0229.MajorityElementII bin/0229.MajorityElementII)
add_subdirectory(Algorithms/0230.KthSmallestElementInBST bin/0230.KthSmallestElementInBST)
add_subdirectory(Algorithms/0231.PowerOfTwo bin/0231.PowerOfTwo)
add_subdirectory(Algorithms/0232.ImplementQueueUsingStacks bin/0232.ImplementQueueUsingStacks)
add_subdirectory(Algorithms/0233.NumberOfDigitOne bin/0233.NumberOfDigitOne)
add_subdirectory(Algorithms/0234.PalindromeLinkedList bin/0234.PalindromeLinkedList)
add_subdirectory(Algorithms/0235.LowestCommonAncestorOfBinarySearchTree bin/0235.LowestCommonAncestorOfBinarySearchTree)
add_subdirectory(Algorithms/0236.LowestCommonAncestorOfBinaryTree bin/0236.LowestCommonAncestorOfBinaryTree)
add_subdirectory(Algorithms/0237.DeleteNodeInLinkedList bin/0237.DeleteNodeInLinkedList)
add_subdirectory(Algorithms/0238.ProductOfArrayExceptSelf bin/0238.ProductOfArrayExceptSelf)
add_subdirectory(Algorithms/0239.SlidingWindowMaximum bin/0239.SlidingWindowMaximum)
add_subdirectory(Algorithms/0242.ValidAnagram bin/0242.ValidAnagram)
add_subdirectory(Algorithms/0257.BinaryTreePaths bin/0257.BinaryTreePaths)
add_subdirectory(Algorithms/0258.AddDigits bin/0258.AddDigits)
add_subdirectory(Algorithms/0263.UglyNumber bin/0263.UglyNumber)
add_subdirectory(Algorithms/0264.UglyNumberII bin/0264.UglyNumberII)
add_subdirectory(Algorithms/0268.MissingNumber bin/0268.MissingNumber)
add_subdirectory(Algorithms/0273.IntegerToEnglishWords bin/0273.IntegerToEnglishWords)
add_subdirectory(Algorithms/0274.HIndex bin/0274.HIndex)
add_subdirectory(Algorithms/0275.HIndexII bin/0275.HIndexII)
add_subdirectory(Algorithms/0278.FirstBadVersion bin/0278.FirstBadVersion)
add_subdirectory(Algorithms/0279.PerfectSquares bin/0279.PerfectSquares)
add_subdirectory(Algorithms/0282.ExpressionAddOperators bin/0282.ExpressionAddOperators)
add_subdirectory(Algorithms/0283.MoveZeroes bin/0283.MoveZeroes)
add_subdirectory(Algorithms/0284.PeekingIterator bin/0284.PeekingIterator)
add_subdirectory(Algorithms/0289.GameOfLife bin/0289.GameOfLife)
add_subdirectory(Algorithms/0290.WordPattern bin/0290.WordPattern)
add_subdirectory(Algorithms/0292.NimGame bin/0292.NimGame)
add_subdirectory(Algorithms/0295.FindMedianFromDataStream bin/0295.FindMedianFromDataStream)
add_subdirectory(Algorithms/0297.SerializeAndDeserializeBinaryTree bin/0297.SerializeAndDeserializeBinaryTree)
add_subdirectory(Algorithms/0299.BullsAndCows bin/0299.BullsAndCows)
add_subdirectory(Algorithms/0300.LongestIncreasingSubsequence bin/0300.LongestIncreasingSubsequence)
add_subdirectory(Algorithms/0303.RangeSumQueryImmutable bin/0303.RangeSumQueryImmutable)
add_subdirectory(Algorithms/0304.RangeSumQuery2DImmutable bin/0304.RangeSumQuery2DImmutable)
add_subdirectory(Algorithms/0306.AdditiveNumber bin/0306.AdditiveNumber)
add_subdirectory(Algorithms/0307.RangeSumQueryMutable bin/0307.RangeSumQueryMutable)
add_subdirectory(Algorithms/0313.SuperUglyNumber bin/0313.SuperUglyNumber)
add_subdirectory(Algorithms/0318.MaximumProductOfWordLengths bin/0318.MaximumProductOfWordLengths)
add_subdirectory(Algorithms/0319.BulbSwitcher bin/0319.BulbSwitcher)
add_subdirectory(Algorithms/0322.CoinChange bin/0322.CoinChange)
add_subdirectory(Algorithms/0326.PowerOfThree bin/0326.PowerOfThree)
add_subdirectory(Algorithms/0328.OddEvenLinkedList bin/0328.OddEvenLinkedList)
add_subdirectory(Algorithms/0331.VerifyPreorderSerializationBinaryTree bin/0331.VerifyPreorderSerializationBinaryTree)
add_subdirectory(Algorithms/0337.HouseRobberIII bin/0337.HouseRobberIII)
add_subdirectory(Algorithms/0338.CountingBits bin/0338.CountingBits)
add_subdirectory(Algorithms/0342.PowerOfFour bin/0342.PowerOfFour)
add_subdirectory(Algorithms/0343.IntegerBreak bin/0343.IntegerBreak)
add_subdirectory(Algorithms/0344.ReverseString bin/0344.ReverseString)
add_subdirectory(Algorithms/0345.ReverseVowelsOfString bin/0345.ReverseVowelsOfString)
add_subdirectory(Algorithms/0347.TopKFrequentElements bin/0347.TopKFrequentElements)
add_subdirectory(Algorithms/0349.IntersectionOfTwoArrays bin/0349.IntersectionOfTwoArrays)
add_subdirectory(Algorithms/0350.IntersectionOfTwoArraysII bin/0350.IntersectionOfTwoArraysII)
add_subdirectory(Algorithms/0357.CountNumbersWithUniqueDigits bin/0357.CountNumbersWithUniqueDigits)
add_subdirectory(Algorithms/0367.ValidPerfectSquare bin/0367.ValidPerfectSquare)
add_subdirectory(Algorithms/0371.SumOfTwoIntegers bin/0371.SumOfTwoIntegers)
add_subdirectory(Algorithms/0372.SuperPow bin/0372.SuperPow)
add_subdirectory(Algorithms/0373.FindKPairsWithSmallestSums bin/0373.FindKPairsWithSmallestSums)
add_subdirectory(Algorithms/0374.GuessNumberHigherOrLower bin/0374.GuessNumberHigherOrLower)
add_subdirectory(Algorithms/0376.WiggleSubsequence bin/0376.WiggleSubsequence)
add_subdirectory(Algorithms/0378.KthSmallestElementInSortedMatrix bin/0378.KthSmallestElementInSortedMatrix)
add_subdirectory(Algorithms/0382.LinkedListRandomNode bin/0382.LinkedListRandomNode)
add_subdirectory(Algorithms/0383.RansomNote bin/0383.RansomNote)
add_subdirectory(Algorithms/0384.ShuffleArray bin/0384.ShuffleArray)
add_subdirectory(Algorithms/0385.MiniParser bin/0385.MiniParser)
add_subdirectory(Algorithms/0386.LexicographicalNumbers bin/0386.LexicographicalNumbers)
add_subdirectory(Algorithms/0387.FirstUniqueCharacterInString bin/0387.FirstUniqueCharacterInString)
add_subdirectory(Algorithms/0388.LongestAbsoluteFilePath bin/0388.LongestAbsoluteFilePath)
add_subdirectory(Algorithms/0389.FindDifference bin/0389.FindDifference)
add_subdirectory(Algorithms/0390.EliminationGame bin/0390.EliminationGame)
add_subdirectory(Algorithms/0392.IsSubsequence bin/0392.IsSubsequence)
add_subdirectory(Algorithms/0393.UTF8Validation bin/0393.UTF8Validation)
add_subdirectory(Algorithms/0394.DecodeString bin/0394.DecodeString)
add_subdirectory(Algorithms/0396.RotateFunction bin/0396.RotateFunction)
add_subdirectory(Algorithms/0397.IntegerReplacement bin/0397.IntegerReplacement)
add_subdirectory(Algorithms/0400.NthDigit bin/0400.NthDigit)
add_subdirectory(Algorithms/0401.BinaryWatch bin/0401.BinaryWatch)
add_subdirectory(Algorithms/0404.SumOfLeftLeaves bin/0404.SumOfLeftLeaves)
add_subdirectory(Algorithms/0405.ConvertNumberToHexadecimal bin/0405.ConvertNumberToHexadecimal)
add_subdirectory(Algorithms/0409.LongestPalindrome bin/0409.LongestPalindrome)
add_subdirectory(Algorithms/0412.FizzBuzz bin/0412.FizzBuzz)
add_subdirectory(Algorithms/0414.ThirdMaximumNumber bin/0414.ThirdMaximumNumber)
add_subdirectory(Algorithms/0415.AddStrings bin/0415.AddStrings)
add_subdirectory(Algorithms/0416.PartitionEqualSubsetSum bin/0416.PartitionEqualSubsetSum)
add_subdirectory(Algorithms/0419.BattleshipsInBoard bin/0419.BattleshipsInBoard)
add_subdirectory(Algorithms/0423.ReconstructOriginalDigitsFromEnglish bin/0423.ReconstructOriginalDigitsFromEnglish)
add_subdirectory(Algorithms/0427.ConstructQuadTree bin/0427.ConstructQuadTree)
add_subdirectory(Algorithms/0430.FlattenMultilevelDoublyLinkedList bin/0430.FlattenMultilevelDoublyLinkedList)
add_subdirectory(Algorithms/0434.NumberOfSegmentsInString bin/0434.NumberOfSegmentsInString)
add_subdirectory(Algorithms/0435.NonOverlappingIntervals bin/0435.NonOverlappingIntervals)
add_subdirectory(Algorithms/0437.PathSumIII bin/0437.PathSumIII)
add_subdirectory(Algorithms/0438.FindAllAnagramsInString bin/0438.FindAllAnagramsInString)
add_subdirectory(Algorithms/0441.ArrangingCoins bin/0441.ArrangingCoins)
add_subdirectory(Algorithms/0442.FindAllDuplicatesInArray bin/0442.FindAllDuplicatesInArray)
add_subdirectory(Algorithms/0443.StringCompression bin/0443.StringCompression)
add_subdirectory(Algorithms/0445.AddTwoNumbersII bin/0445.AddTwoNumbersII)
add_subdirectory(Algorithms/0448.FindAllNumbersDisappearedInArray bin/0448.FindAllNumbersDisappearedInArray)
add_subdirectory(Algorithms/0449.SerializeAndDeserializeBST bin/0449.SerializeAndDeserializeBST)
add_subdirectory(Algorithms/0450.DeleteNodeInBST bin/0450.DeleteNodeInBST)
add_subdirectory(Algorithms/0451.SortCharactersByFrequency bin/0451.SortCharactersByFrequency)
add_subdirectory(Algorithms/0455.AssignCookies bin/0455.AssignCookies)
add_subdirectory(Algorithms/0461.HammingDistance bin/0461.HammingDistance)
add_subdirectory(Algorithms/0463.IslandPerimeter bin/0463.IslandPerimeter)
add_subdirectory(Algorithms/0468.ValidateIPAddress bin/0468.ValidateIPAddress)
add_subdirectory(Algorithms/0473.MatchsticksToSquare bin/0473.MatchsticksToSquare)
add_subdirectory(Algorithms/0474.OnesAndZeroes bin/0474.OnesAndZeroes)
add_subdirectory(Algorithms/0475.Heaters bin/0475.Heaters)
add_subdirectory(Algorithms/0476.NumberComplement bin/0476.NumberComplement)
add_subdirectory(Algorithms/0478.GenerateRandomPointInCircle bin/0478.GenerateRandomPointInCircle)
add_subdirectory(Algorithms/0482.LicenseKeyFormatting bin/0482.LicenseKeyFormatting)
add_subdirectory(Algorithms/0485.MaxConsecutiveOnes bin/0485.MaxConsecutiveOnes)
add_subdirectory(Algorithms/0492.ConstructTheRectangle bin/0492.ConstructTheRectangle)
add_subdirectory(Algorithms/0494.TargetSum bin/0494.TargetSum)
add_subdirectory(Algorithms/0495.TeemoAttacking bin/0495.TeemoAttacking)
add_subdirectory(Algorithms/0496.NextGreaterElementI bin/0496.NextGreaterElementI)
add_subdirectory(Algorithms/0498.DiagonalTraverse bin/0498.DiagonalTraverse)
add_subdirectory(Algorithms/0500.KeyboardRow bin/0500.KeyboardRow)
add_subdirectory(Algorithms/0503.NextGreaterElementII bin/0503.NextGreaterElementII)
add_subdirectory(Algorithms/0504.Base7 bin/0504.Base7)
add_subdirectory(Algorithms/0506.RelativeRanks bin/0506.RelativeRanks)
add_subdirectory(Algorithms/0507.PerfectNumber bin/0507.PerfectNumber)
add_subdirectory(Algorithms/0508.MostFrequentSubtreeSum bin/0508.MostFrequentSubtreeSum)
add_subdirectory(Algorithms/0509.FibonacciNumber bin/0509.FibonacciNumber)
add_subdirectory(Algorithms/0513.FindBottomLeftTreeValue bin/0513.FindBottomLeftTreeValue)
add_subdirectory(Algorithms/0515.FindLargestValueInEachTreeRow bin/0515.FindLargestValueInEachTreeRow)
add_subdirectory(Algorithms/0518.CoinChange2 bin/0518.CoinChange2)
add_subdirectory(Algorithms/0520.DetectCapital bin/0520.DetectCapital)
add_subdirectory(Algorithms/0521.LongestUncommonSubsequenceI bin/0521.LongestUncommonSubsequenceI)
add_subdirectory(Algorithms/0529.Minesweeper bin/0529.Minesweeper)
add_subdirectory(Algorithms/0530.MinimumAbsoluteDifferenceInBST bin/0530.MinimumAbsoluteDifferenceInBST)
add_subdirectory(Algorithms/0532.KdiffPairsInArray bin/0532.KdiffPairsInArray)
add_subdirectory(Algorithms/0535.EncodeDecodeTinyURL bin/0535.EncodeDecodeTinyURL)
add_subdirectory(Algorithms/0537.ComplexNumberMultiplication bin/0537.ComplexNumberMultiplication)
add_subdirectory(Algorithms/0538.ConvertBSTToGreaterTree bin/0538.ConvertBSTToGreaterTree)
add_subdirectory(Algorithms/0539.MinimumTimeDifference bin/0539.MinimumTimeDifference)
add_subdirectory(Algorithms/0540.SingleElementInSortedArray bin/0540.SingleElementInSortedArray)
add_subdirectory(Algorithms/0541.ReverseStringII bin/0541.ReverseStringII)
add_subdirectory(Algorithms/0542.01Matrix bin/0542.01Matrix)
add_subdirectory(Algorithms/0543.DiameterOfBinaryTree bin/0543.DiameterOfBinaryTree)
add_subdirectory(Algorithms/0547.FriendCircles bin/0547.FriendCircles)
add_subdirectory(Algorithms/0551.StudentAttendanceRecordI bin/0551.StudentAttendanceRecordI)
add_subdirectory(Algorithms/0552.StudentAttendanceRecordII bin/0552.StudentAttendanceRecordII)
add_subdirectory(Algorithms/0553.OptimalDivision bin/0553.OptimalDivision)
add_subdirectory(Algorithms/0554.BrickWall bin/0554.BrickWall)
add_subdirectory(Algorithms/0556.NextGreaterElementIII bin/0556.NextGreaterElementIII)
add_subdirectory(Algorithms/0557.ReverseWordsInStringIII bin/0557.ReverseWordsInStringIII)
add_subdirectory(Algorithms/0561.ArrayPartitionI bin/0561.ArrayPartitionI)
add_subdirectory(Algorithms/0563.BinaryTreeTilt bin/0563.BinaryTreeTilt)
add_subdirectory(Algorithms/0565.ArrayNesting bin/0565.ArrayNesting)
add_subdirectory(Algorithms/0566.ReshapeMatrix bin/0566.ReshapeMatrix)
add_subdirectory(Algorithms/0567.PermutationInString bin/0567.PermutationInString)
add_subdirectory(Algorithms/0572.SubtreeOfAnotherTree bin/0572.SubtreeOfAnotherTree)
add_subdirectory(Algorithms/0576.OutOfBoundaryPaths bin/0576.OutOfBoundaryPaths)
add_subdirectory(Algorithms/0581.ShortestUnsortedContinuousSubarray bin/0581.ShortestUnsortedContinuousSubarray)
add_subdirectory(Algorithms/0591.TagValidator bin/0591.TagValidator)
add_subdirectory(Algorithms/0592.FractionAdditionSubtraction bin/0592.FractionAdditionSubtraction)
add_subdirectory(Algorithms/0593.ValidSquare bin/0593.ValidSquare)
add_subdirectory(Algorithms/0594.LongestHarmoniousSubsequence bin/0594.LongestHarmoniousSubsequence)
add_subdirectory(Algorithms/0599.MinimumIndexSumOfTwoLists bin/0599.MinimumIndexSumOfTwoLists)
add_subdirectory(Algorithms/0605.CanPlaceFlowers bin/0605.CanPlaceFlowers)
add_subdirectory(Algorithms/0609.FindDuplicateFileInSystem bin/0609.FindDuplicateFileInSystem)
add_subdirectory(Algorithms/0611.ValidTriangleNumber bin/0611.ValidTriangleNumber)
add_subdirectory(Algorithms/0622.DesignCircularQueue bin/0622.DesignCircularQueue)
add_subdirectory(Algorithms/0623.AddOneRowToTree bin/0623.AddOneRowToTree)
add_subdirectory(Algorithms/0628.MaximumProductOfThreeNumbers bin/0628.MaximumProductOfThreeNumbers)
add_subdirectory(Algorithms/0633.SumOfSquareNumbers bin/0633.SumOfSquareNumbers)
add_subdirectory(Algorithms/0636.ExclusiveTimeOfFunctions bin/0636.ExclusiveTimeOfFunctions)
add_subdirectory(Algorithms/0637.AverageOfLevelsInBinaryTree bin/0637.AverageOfLevelsInBinaryTree)
add_subdirectory(Algorithms/0639.DecodeWaysII bin/0639.DecodeWaysII)
add_subdirectory(Algorithms/0640.SolveEquation bin/0640.SolveEquation)
add_subdirectory(Algorithms/0641.DesignCircularDeque bin/0641.DesignCircularDeque)
add_subdirectory(Algorithms/0645.SetMismatch bin/0645.SetMismatch)
add_subdirectory(Algorithms/0646.MaximumLengthOfPairChain bin/0646.MaximumLengthOfPairChain)
add_subdirectory(Algorithms/0650.2KeysKeyboard bin/0650.2KeysKeyboard)
add_subdirectory(Algorithms/0654.MaximumBinaryTree bin/0654.MaximumBinaryTree)
add_subdirectory(Algorithms/0657.RobotReturnToOrigin bin/0657.RobotReturnToOrigin)
add_subdirectory(Algorithms/0674.LongestContinuousIncSubseq bin/0674.LongestContinuousIncSubseq)
add_subdirectory(Algorithms/0680.ValidPalindromeII bin/0680.ValidPalindromeII)
add_subdirectory(Algorithms/0695.MaxAreaOfIsland bin/0695.MaxAreaOfIsland)
add_subdirectory(Algorithms/0707.DesignLinkedList bin/0707.DesignLinkedList)
add_subdirectory(Algorithms/0709.ToLowerCase bin/0709.ToLowerCase)
add_subdirectory(Algorithms/0717.OneAndTwoBitCharacters bin/0717.OneAndTwoBitCharacters)
add_subdirectory(Algorithms/0722.RemoveComments bin/0722.RemoveComments)
add_subdirectory(Algorithms/0725.SplitLinkedListInParts bin/0725.SplitLinkedListInParts)
add_subdirectory(Algorithms/0726.NumberOfAtoms bin/0726.NumberOfAtoms)
add_subdirectory(Algorithms/0728.SelfDividingNumbers bin/0728.SelfDividingNumbers)
add_subdirectory(Algorithms/0735.AsteroidCollision bin/0735.AsteroidCollision)
add_subdirectory(Algorithms/0736.ParseLispExpression bin/0736.ParseLispExpression)
add_subdirectory(Algorithms/0738.MonotoneIncreasingDigits bin/0738.MonotoneIncreasingDigits)
add_subdirectory(Algorithms/0739.DailyTemperatures bin/0739.DailyTemperatures)
add_subdirectory(Algorithms/0744.FindSmallestLetterGreaterThanTarget bin/0744.FindSmallestLetterGreaterThanTarget)
add_subdirectory(Algorithms/0747.LargestNumberAtLeastTwiceOthers bin/0747.LargestNumberAtLeastTwiceOthers)
add_subdirectory(Algorithms/0763.PartitionLabels bin/0763.PartitionLabels)
add_subdirectory(Algorithms/0766.ToeplitzMatrix bin/0766.ToeplitzMatrix)
add_subdirectory(Algorithms/0768.MaxChunksToMakeSortedII bin/0768.MaxChunksToMakeSortedII)
add_subdirectory(Algorithms/0769.MaxChunksToMakeSorted bin/0769.MaxChunksToMakeSorted)
add_subdirectory(Algorithms/0779.KthSymbolInGrammar bin/0779.KthSymbolInGrammar)
add_subdirectory(Algorithms/0783.MinimumDistanceBetweenBSTNodes bin/0783.MinimumDistanceBetweenBSTNodes)
add_subdirectory(Algorithms/0784.LetterCasePermutation bin/0784.LetterCasePermutation)
add_subdirectory(Algorithms/0785.IsGraphBipartite bin/0785.IsGraphBipartite)
add_subdirectory(Algorithms/0790.DominoAndTrominoTiling bin/0790.DominoAndTrominoTiling)
add_subdirectory(Algorithms/0791.CustomSortString bin/0791.CustomSortString)
add_subdirectory(Algorithms/0792.NumberOfMatchingSubsequences bin/0792.NumberOfMatchingSubsequences)
add_subdirectory(Algorithms/0794.ValidTicTacToeState bin/0794.ValidTicTacToeState)
add_subdirectory(Algorithms/0796.RotateString bin/0796.RotateString)
add_subdirectory(Algorithms/0797.AllPathsFromSourceToTarget bin/0797.AllPathsFromSourceToTarget)
add_subdirectory(Algorithms/0804.UniqueMorseCodeWords bin/0804.UniqueMorseCodeWords)
add_subdirectory(Algorithms/0806.NumberOfLinesToWriteString bin/0806.NumberOfLinesToWriteString)
add_subdirectory(Algorithms/0809.ExpressiveWords bin/0809.ExpressiveWords)
add_subdirectory(Algorithms/0816.AmbiguousCoordinates bin/0816.AmbiguousCoordinates)
add_subdirectory(Algorithms/0819.MostCommonWord bin/0819.MostCommonWord)
add_subdirectory(Algorithms/0824.GoatLatin bin/0824.GoatLatin)
add_subdirectory(Algorithms/0829.ConsecutiveNumbersSum bin/0829.ConsecutiveNumbersSum)
add_subdirectory(Algorithms/0831.MaskingPersonalInformation bin/0831.MaskingPersonalInformation)
add_subdirectory(Algorithms/0832.FlippingImage bin/0832.FlippingImage)
add_subdirectory(Algorithms/0833.FindAndReplaceInString bin/0833.FindAndReplaceInString)
add_subdirectory(Algorithms/0838.PushDominoes bin/0838.PushDominoes)
add_subdirectory(Algorithms/0840.MagicSquaresInGrid bin/0840.MagicSquaresInGrid)
add_subdirectory(Algorithms/0846.HandOfStraights bin/0846.HandOfStraights)
add_subdirectory(Algorithms/0848.ShiftingLetters bin/0848.ShiftingLetters)
add_subdirectory(Algorithms/0849.MaximizeDistanceToClosestPerson bin/0849.MaximizeDistanceToClosestPerson)
add_subdirectory(Algorithms/0856.ScoreOfParentheses bin/0856.ScoreOfParentheses)
add_subdirectory(Algorithms/0863.AllNodesDistanceKInBinaryTree bin/0863.AllNodesDistanceKInBinaryTree)
add_subdirectory(Algorithms/0865.SmallestSubtreeWithAllDeepestNodes bin/0865.SmallestSubtreeWithAllDeepestNodes)
add_subdirectory(Algorithms/0866.PrimePalindrome bin/0866.PrimePalindrome)
add_subdirectory(Algorithms/0867.TransposeMatrix bin/0867.TransposeMatrix)
add_subdirectory(Algorithms/0869.ReorderedPower2 bin/0869.ReorderedPower2)
add_subdirectory(Algorithms/0880.DecodedStringAtIndex bin/0880.DecodedStringAtIndex)
add_subdirectory(Algorithms/0881.BoatsToSavePeople bin/0881.BoatsToSavePeople)
add_subdirectory(Algorithms/0885.SpiralMatrixIII bin/0885.SpiralMatrixIII)
add_subdirectory(Algorithms/0890.FindReplacePattern bin/0890.FindReplacePattern)
add_subdirectory(Algorithms/0916.WordSubsets bin/0916.WordSubsets)
add_subdirectory(Algorithms/0926.FlipStringToMonotoneIncreasing bin/0926.FlipStringToMonotoneIncreasing)
add_subdirectory(Algorithms/0927.ThreeEqualParts bin/0927.ThreeEqualParts)
add_subdirectory(Algorithms/0931.MinimumFallingPathSum bin/0931.MinimumFallingPathSum)
add_subdirectory(Algorithms/0935.KnightDialer bin/0935.KnightDialer)
add_subdirectory(Algorithms/0946.ValidateStackSequences bin/0946.ValidateStackSequences)
add_subdirectory(Algorithms/0949.LargestTimeForGivenDigits bin/0949.LargestTimeForGivenDigits)
add_subdirectory(Algorithms/0950.RevealCardsIncreasingOrder bin/0950.RevealCardsIncreasingOrder)
add_subdirectory(Algorithms/0957.PrisonCellsAfterNDays bin/0957.PrisonCellsAfterNDays)
add_subdirectory(Algorithms/0958.CheckCompletenessOfBinaryTree bin/0958.CheckCompletenessOfBinaryTree)
add_subdirectory(Algorithms/0966.VowelSpellchecker bin/0966.VowelSpellchecker)
add_subdirectory(Algorithms/0970.PowerfulIntegers bin/0970.PowerfulIntegers)
add_subdirectory(Algorithms/0976.LargestPerimeterTriangle bin/0976.LargestPerimeterTriangle)
add_subdirectory(Algorithms/0977.SquaresOfSortedArray bin/0977.SquaresOfSortedArray)
add_subdirectory(Algorithms/0984.StringWithoutAAAorBBB bin/0984.StringWithoutAAAorBBB)
add_subdirectory(Algorithms/0988.SmallestStringStartingFromLeaf bin/0988.SmallestStringStartingFromLeaf)
add_subdirectory(Algorithms/1003.CheckIfWordValidAfterSubstitutions bin/1003.CheckIfWordValidAfterSubstitutions)
add_subdirectory(Algorithms/1006.ClumsyFactorial bin/1006.ClumsyFactorial)
add_subdirectory(Algorithms/1007.MinDominoRotationsForEqualRow bin/1007.MinDominoRotationsForEqualRow)
add_subdirectory(Algorithms/1008.ConstructBSTFromPreorderTraversal bin/1008.ConstructBSTFromPreorderTraversal)
add_subdirectory(Algorithms/1018.BinaryPrefixDivisibleBy5 bin/1018.BinaryPrefixDivisibleBy5)
add_subdirectory(Algorithms/1019.NextGreaterNodeInLinkedList bin/1019.NextGreaterNodeInLinkedList)
add_subdirectory(Algorithms/1028.RecoverTreeFromPreorderTraversal bin/1028.RecoverTreeFromPreorderTraversal)
add_subdirectory(Algorithms/1038.BinarySearchTreeToGreaterSumTree bin/1038.BinarySearchTreeToGreaterSumTree)
add_subdirectory(Algorithms/1041.RobotBoundedInCircle bin/1041.RobotBoundedInCircle)
add_subdirectory(Algorithms/1089.DuplicateZeros bin/1089.DuplicateZeros)
add_subdirectory(Algorithms/1104.PathInZigzagLabelledBinaryTree bin/1104.PathInZigzagLabelledBinaryTree)
add_subdirectory(Algorithms/1106.ParsingBooleanExpression bin/1106.ParsingBooleanExpression)
add_subdirectory(Algorithms/1123.LowestCommonAncestorDeepestLeaves bin/1123.LowestCommonAncestorDeepestLeaves)
add_subdirectory(Algorithms/1154.DayOfYear bin/1154.DayOfYear)
add_subdirectory(Algorithms/1220.CountVowelsPermutation bin/1220.CountVowelsPermutation)
add_subdirectory(Algorithms/1296.DivideArrayInSetsKConsecutiveNumbers bin/1296.DivideArrayInSetsKConsecutiveNumbers)
add_subdirectory(Algorithms/1307.VerbalArithmeticPuzzle bin/1307.VerbalArithmeticPuzzle)
add_subdirectory(Algorithms/1309.DecryptStringFromAlphabetToIntMapping bin/1309.DecryptStringFromAlphabetToIntMapping)
add_subdirectory(Algorithms/1363.LargestMultipleOfThree bin/1363.LargestMultipleOfThree)
add_subdirectory(Algorithms/1509.MinDiffBetweenLargestSmallestValueIn3Moves bin/1509.MinDiffBetweenLargestSmallestValueIn3Moves)
add_subdirectory(Algorithms/1514.PathWithMaximumProbability bin/1514.PathWithMaximumProbability)
add_subdirectory(Algorithms/1519.NumberNodesInSubTreeWithSameLabel bin/1519.NumberNodesInSubTreeWithSameLabel)
add_subdirectory(Algorithms/1525.NumberOfGoodWaysToSplitString bin/1525.NumberOfGoodWaysToSplitString)
add_subdirectory(Algorithms/1528.ShuffleString bin/1528.ShuffleString)
add_subdirectory(Algorithms/1534.CountGoodTriplets bin/1534.CountGoodTriplets)
add_subdirectory(Algorithms/1541.MinimumInsertionsToBalanceParenthesesString bin/1541.MinimumInsertionsToBalanceParenthesesString)
add_subdirectory(Algorithms/1545.FindKthBitInNthBinaryString bin/1545.FindKthBitInNthBinaryString)
add_subdirectory(Algorithms/1572.MatrixDiagonalSum bin/1572.MatrixDiagonalSum)
add_subdirectory(Algorithms/1594.MaximumNonNegativeProductInMatrix bin/1594.MaximumNonNegativeProductInMatrix)
add_subdirectory(Algorithms/1609.EvenOddTree bin/1609.EvenOddTree)
add_subdirectory(Algorithms/1641.CountSortedVowelStrings bin/1641.CountSortedVowelStrings)
add_subdirectory(Algorithms/1652.DefuseBomb bin/1652.DefuseBomb)
add_subdirectory(Algorithms/1694.ReformatPhoneNumber bin/1694.ReformatPhoneNumber)
add_subdirectory(Algorithms/1720.DecodeXORedArray bin/1720.DecodeXORedArray)
add_subdirectory(Algorithms/1773.CountItemsMatchingRule bin/1773.CountItemsMatchingRule)
add_subdirectory(Algorithms/1779.FindNearestPointThatHasSameXOrYCoord bin/1779.FindNearestPointThatHasSameXOrYCoord)
add_subdirectory(Algorithms/1780.CheckIfNumberSumOfPowersOfThree bin/1780.CheckIfNumberSumOfPowersOfThree)
add_subdirectory(Algorithms/1784.CheckBinaryStringHasAtMostOneSegmentOnes bin/1784.CheckBinaryStringHasAtMostOneSegmentOnes)
add_subdirectory(Algorithms/1790.CheckIfOneSwapCanMakeStringsEqual bin/1790.CheckIfOneSwapCanMakeStringsEqual)
add_subdirectory(Algorithms/1796.SecondLargestDigitInString bin/1796.SecondLargestDigitInString)
add_subdirectory(Algorithms/1800.MaximumAscendingSubarraySum bin/1800.MaximumAscendingSubarraySum)

